@@ -1,0 +1,43 @@
+// $Id: $
+
+#ifndef MAINMEMORYVIEWER_H
+#define MAINMEMORYVIEWER_H
+
+#include <QWidget>
+#include "HexViewer.h"
+#include <QString>
+#include <QComboBox>
+#include <QLineEdit>
+
+class MainMemoryViewer : public QWidget
+{
+	Q_OBJECT
+public:
+	MainMemoryViewer(QWidget* parent = 0);
+	~MainMemoryViewer();
+
+	void setDebuggable( const QString& name, int size );
+
+
+public slots:
+	void setLocation(int addr);
+	void settingsChanged();
+	void refresh();
+	void registerChanged(int id, int value);
+
+	void hexViewChanged(int addr);
+	void addressValueChanged();
+	void addressSourceListChanged(int index);
+
+private:
+	HexViewer* hexView;
+	QComboBox* addressSourceList;
+	QLineEdit* addressValue;
+
+	bool isLinked;
+	int linkedId;
+	static const int linkRegisters[];
+};
+
+
+#endif // MAINMEMORYVIEWER_H
